--- a/Server Storage Forecasting/app/Dockerfile
+++ b/Server Storage Forecasting/app/Dockerfile
@@ -6,6 +6,6 @@ COPY finalized_model.sav .
 COPY logo.png .
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN apt-get update && apt-get -y install gcc build-essential && pip install -r requirements.txt
 
 CMD streamlit run app.py --server.port=8050 --server.address=0.0.0.0 --logger.level error
