--- a/Product Performance Analysis App/app/Dockerfile
+++ b/Product Performance Analysis App/app/Dockerfile
@@ -8,6 +8,6 @@ COPY assets/fashion_mnist.css .
 COPY assets/logo.png .
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN apt-get update && apt-get -y install gcc build-essential && pip install -r requirements.txt
 
 CMD python app.py --server.port=8050 --server.address=0.0.0.0 --logger.level error
