--- a/Stock Movement Demonstrator App/app/Dockerfile
+++ b/Stock Movement Demonstrator App/app/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8.2-slim
 
 COPY app.py .
 COPY assets/logo.png .
-COPY templates/index3.html .
+COPY template/index3.html .
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
