--- a/Forecaster App/app/Dockerfile
+++ b/Forecaster App/app/Dockerfile
@@ -44,6 +44,6 @@ COPY templates/build-forecast-v3.html .
 COPY templates/forecaster.html .
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN apt-get update && apt-get -y install gcc build-essential && pip install -r requirements.txt
 
 CMD python app.py --server.port=8050 --server.address=0.0.0.0 --logger.level error
