--- a/Fraud Detection in Energy and Gas consumption/app/Dockerfile
+++ b/Fraud Detection in Energy and Gas consumption/app/Dockerfile
@@ -8,5 +8,8 @@ COPY logo.png .
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
+RUN apt-get update && apt-get install -y --no-install-recommends apt-utils
+RUN apt-get -y install curl
+RUN apt-get install libgomp1
 
 CMD streamlit run app.py --server.port=8050 --server.address=0.0.0.0 --logger.level error
