--- a/Product Performance Analysis App/app/Dockerfile
+++ b/Product Performance Analysis App/app/Dockerfile
@@ -1,11 +1,13 @@
 FROM python:3.8.2-slim
 
+RUN mkdir -p assets
+
 COPY app.py .
 COPY final_ads_till_Aug.csv .
 COPY final_data_till_Aug_Flag_with_adj_1.csv .
 COPY final_output_Oct_final.csv .
-COPY assets/fashion_mnist.css .
-COPY assets/logo.png .
+COPY assets/fashion_mnist.css assets/.
+COPY assets/logo.png assets/.
 COPY requirements.txt .
 
 RUN apt-get update && apt-get -y install gcc build-essential && pip install -r requirements.txt
