updated directory path

--- a/Stock Movement Demonstrator App/app/Dockerfile
+++ b/Stock Movement Demonstrator App/app/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.8.2-slim
 
+RUN mkdir -p assets templates
+
 COPY app.py .
-COPY assets/logo.png .
-COPY template/index3.html .
+COPY assets/logo.png assets/.
+COPY templates/index3.html templates/.
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
