--- a/Startup Profit Prediction App/app/Dockerfile
+++ b/Startup Profit Prediction App/app/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3.8.2-slim
 
+RUN mkdir -p models templates
+
 COPY app.py .
-COPY models/columns.json .
-COPY models/profit_prediction_model.pkl .
-COPY templates/index.html .
+COPY models/columns.json models/.
+COPY models/profit_prediction_model.pkl models/.
+COPY templates/index.html templates/.
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
