updated directory path

--- a/Named Entity Recognition/app/Dockerfile
+++ b/Named Entity Recognition/app/Dockerfile
@@ -1,14 +1,14 @@
 FROM python:3.8.2-slim
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt && python -m spacy download en_core_web_sm && rm requirements.txt
+RUN mkdir -p templates
 
-# COPY models/columns.json .
-# COPY models/profit_prediction_model.pkl .
 COPY app.py .
-COPY templates/index.html .
-COPY templates/preview.html .
-COPY templates/previewer.html .
-COPY templates/result.html .
+COPY templates/index.html templates/.
+COPY templates/preview.html templates/.
+COPY templates/previewer.html templates/.
+COPY templates/result.html templates/.
+COPY requirements.txt .
+
+RUN pip install -r requirements.txt && python -m spacy download en_core_web_sm && rm requirements.txt
 
 CMD python app.py --server.port=8050 --server.address=0.0.0.0 --logger.level error
