--- a/Audio-to-Text App/app/requirements.txt
+++ b/Audio-to-Text App/app/requirements.txt
@@ -1,4 +1,4 @@
 streamlit==1.4.0
 youtube-dl==2021.12.17
 zipp==3.4.0
-git+https://github.com/ehsanbehdad/Pytube
+# git+https://github.com/ehsanbehdad/Pytube
