--- a/Audio-to-Text App/app/Dockerfile
+++ b/Audio-to-Text App/app/Dockerfile
@@ -4,7 +4,7 @@ COPY app.py .
 COPY logo.png .
 COPY requirements.txt .
 
-RUN pip install git+https://github.com/ehsanbehdad/Pytube
+RUN pip install -e git+https://github.com/ehsanbehdad/Pytube#egg=pytube
 RUN pip install -r requirements.txt
 
 CMD streamlit run app.py --server.port=8050 --server.address=0.0.0.0 --logger.level error
