--- a/Audio-to-Text App/app/Dockerfile
+++ b/Audio-to-Text App/app/Dockerfile
@@ -4,6 +4,7 @@ COPY app.py .
 COPY logo.png .
 COPY requirements.txt .
 
+RUN apt-get update && apt-get upgrade -y && apt-get install -y git
 RUN pip install -e git+https://github.com/ehsanbehdad/Pytube#egg=pytube
 RUN pip install -r requirements.txt
 
